--- a/hello.html
+++ b/hello.html
@@ -57,5 +57,6 @@
             <li>Vegitable</li>
             <li>kaju kadi</li>
         </ol>
+        <p><strong>End of the code</strong></p>
     </body>
 </html>
