--- a/hello.html
+++ b/hello.html
@@ -57,6 +57,6 @@
             <li>Vegitable</li>
             <li>kaju kadi</li>
         </ol>
-        <p><strong>End of the code</strong></p>
+        <p style="border:1px solid black"><strong>End of the code</strong></p>
     </body>
 </html>
